force-app/main/default/objects/ESS_Master_Employee__c.object
<CustomObject>
    <fields>
        <fullName>Retirement_Section_Head_Position_TH__c</fullName>
        <label>Retirement Section Head Position TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_Section_Head_Position__c</fullName>
        <label>Retirement Section Head Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_Section_Head_Skip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retirement Section Head Skip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retirement_Section_Head_TH__c</fullName>
        <label>Retirement Section Head TH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_VP_Id__c</fullName>
        <label>Retirement VP Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_VP_Name__c</fullName>
        <label>Retirement VP Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_VP_Position_TH__c</fullName>
        <label>Retirement VP Position TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_VP_Position__c</fullName>
        <label>Retirement VP Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_VP_TH__c</fullName>
        <label>Retirement VP TH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rich_Text_Sample__c</fullName>
        <label>Rich Text Sample</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SAP_JSON__c</fullName>
        <label>SAP JSON</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sending_to_SAP_Date__c</fullName>
        <label>Sending to SAP Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_Change_LN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Divorce Change LN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_Change_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Divorce Change Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_Doc_Issue_Date__c</fullName>
        <label>Status Divorce Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_Doc_Issue_Location__c</fullName>
        <label>Status Divorce Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_Doc_Issue_Province__c</fullName>
        <label>Status Divorce Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_Doc_No__c</fullName>
        <label>Status Divorce Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_EN_FN__c</fullName>
        <label>Status Divorce EN FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_EN_LN__c</fullName>
        <label>Status Divorce EN LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_EN_New_LN__c</fullName>
        <label>Status Divorce EN New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_EN_New_Title__c</fullName>
        <label>Status Divorce EN New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Divorce_EN_Title__c</fullName>
        <label>Status Divorce EN Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Divorce_TH_FN__c</fullName>
        <label>Status Divorce TH FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_TH_LN__c</fullName>
        <label>Status Divorce TH LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_TH_New_LN__c</fullName>
        <label>Status Divorce TH New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Divorce_TH_New_Title__c</fullName>
        <label>Status Divorce TH New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Divorce_TH_Title__c</fullName>
        <label>Status Divorce TH Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Marriage_Change_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Marriage Change Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Change_LN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Marriage Change LN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Change_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Marriage Change Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Citizen_Id__c</fullName>
        <label>Status Marriage Citizen Id</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_DOB__c</fullName>
        <label>Status Marriage DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Doc_Issue_Date__c</fullName>
        <label>Status Marriage Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Doc_Issue_Location__c</fullName>
        <label>Status Marriage Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Doc_Issue_Province__c</fullName>
        <label>Status Marriage Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Doc_No__c</fullName>
        <label>Status Marriage Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_EN_FN__c</fullName>
        <label>Status Marriage EN FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_EN_LN__c</fullName>
        <label>Status Marriage EN LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_EN_New_LN__c</fullName>
        <label>Status Marriage EN New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_EN_New_Title__c</fullName>
        <label>Status Marriage EN New Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Marriage_EN_Title__c</fullName>
        <label>Status Marriage EN Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Marriage_Employee_Id__c</fullName>
        <label>Status Marriage Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Gender__c</fullName>
        <label>Status Marriage Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Occupation__c</fullName>
        <label>Status Marriage Occupation</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Status__c</fullName>
        <label>Status Marriage Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Married</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Widow</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Divorced</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Seperate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Marriage_TH_FN__c</fullName>
        <label>Status Marriage TH FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_TH_LN__c</fullName>
        <label>Status Marriage TH LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_TH_New_LN__c</fullName>
        <label>Status Marriage TH New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_TH_New_Title__c</fullName>
        <label>Status Marriage TH New Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Marriage_TH_Title__c</fullName>
        <label>Status Marriage TH Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>นาย</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>นาง</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>นางสาว</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>ดร</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Widow_Change_LN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Widow Change LN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Widow_Change_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Widow Change Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Widow_Doc_Issue_Date__c</fullName>
        <label>Status Widow Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Widow_Doc_Issue_Location__c</fullName>
        <label>Status Widow Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_Doc_Issue_Province__c</fullName>
        <label>Status Widow Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_Doc_No__c</fullName>
        <label>Status Widow Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_EN_FN__c</fullName>
        <label>Status Widow EN FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_EN_LN__c</fullName>
        <label>Status Widow EN LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_EN_New_LN__c</fullName>
        <label>Status Widow EN New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_EN_New_Title__c</fullName>
        <label>Status Widow EN New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Widow_EN_Title__c</fullName>
        <label>Status Widow EN Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Widow_TH_FN__c</fullName>
        <label>Status Widow TH FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_TH_LN__c</fullName>
        <label>Status Widow TH LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_TH_New_LN__c</fullName>
        <label>Status Widow TH New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_TH_New_Title__c</fullName>
        <label>Status Widow TH New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Widow_TH_Title__c</fullName>
        <label>Status Widow TH Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>SendingToSAP</fullName>
                    <label>Sending To SAP</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <label>Updated in SAP / Completed</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                    <label>Error updated in SAP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Annuity_Interest_Amount__c</fullName>
        <label>Tax Annuity Interest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Child_Count__c</fullName>
        <label>Tax Child Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Donation_For_Charity_Amount__c</fullName>
        <label>Tax Donation For Charity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Donation_For_Education_Amount__c</fullName>
        <label>Tax Donation For Education Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_First_House_Exclude_Tax_Amount__c</fullName>
        <label>Tax First House Exclude Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Income_From_RMF_Amount__c</fullName>
        <label>Tax Income From RMF Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Income_From_SSF_Amount__c</fullName>
        <label>Tax Income From SSF Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Interest_On_Loan_For_House_Amount__c</fullName>
        <label>Tax Interest On Loan For House Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Marriage_Person_Earn_Income__c</fullName>
        <inlineHelpText>1) ลดหย่อนคู่สมรส = คู่สมรสไม่มีเงินได้
(2) ไม่ลดหย่อนคู่สมรส = คู่สมรสมีเงินได้</inlineHelpText>
        <label>Tax Marriage Person Earn Income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>ลดหย่อนคู่สมรส</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>ไม่ลดหย่อนคู่สมรส</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Marriage_Status__c</fullName>
        <label>Tax Marriage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Married</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Married_Deduction_Father_Amount__c</fullName>
        <label>Tax Married Deduction Father Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Married_Deduction_Mother_Amount__c</fullName>
        <label>Tax Married Deduction Mother Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Married_Father_Insurance_Paid_Amount__c</fullName>
        <label>Tax Married Father Insurance Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Married_Life_Insurance_Paid_Amount__c</fullName>
        <label>Tax Married Life Insurance Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Married_Mother_Insurance_Paid_Amount__c</fullName>
        <label>Tax Married Mother Insurance Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Pregnancy_Care_Amount__c</fullName>
        <label>Tax Pregnancy Care Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Self_Deduction_Father_Amount__c</fullName>
        <label>Tax Self Deduction Father Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Self_Deduction_Mother_Amount__c</fullName>
        <label>Tax Self Deduction Mother Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Self_Father_Insurance_Paid_Amount__c</fullName>
        <label>Tax Self Father Insurance Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Self_Life_Insurance_Paid_Amount__c</fullName>
        <label>Tax Self Life Insurance Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Self_Mother_Insurance_Paid_Amount__c</fullName>
        <label>Tax Self Mother Insurance Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Sponsor_Amount__c</fullName>
        <label>Tax Sponsor Amount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Total_Child_Count__c</fullName>
        <label>Tax Total Child Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Log__c</fullName>
        <label>Validation Log</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <label>Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isValidationExist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isValidationExist</label>
        <type>Checkbox</type>
    </fields>
    <label>ESS Master Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document_No__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Employee_ID__c</columns>
        <columns>ExternalId__c</columns>
        <columns>Status__c</columns>
        <columns>Contact_Person_JSON__c</columns>
        <columns>Status_Marriage_Status__c</columns>
        <columns>Name_Emp_EN_Title__c</columns>
        <columns>Name_Emp_EN_FN__c</columns>
        <columns>Name_Emp_EN_LN__c</columns>
        <columns>Data__c</columns>
        <columns>License_Professional_Engineer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ESS_OUT</fullName>
        <columns>NAME</columns>
        <columns>Document_No__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>Employee_Name__c</columns>
        <columns>Status_Marriage_Status__c</columns>
        <columns>Name_Emp_EN_Title__c</columns>
        <columns>Name_Emp_EN_FN__c</columns>
        <columns>Name_Emp_EN_LN__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>Available_Room__c</columns>
        <columns>CEP__c</columns>
        <columns>Verified_Date__c</columns>
        <columns>Name_Child_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data__c</field>
            <operation>equals</operation>
            <value>OUT</value>
        </filters>
        <label>OUT</label>
    </listViews>
    <listViews>
        <fullName>IN</fullName>
        <columns>NAME</columns>
        <columns>Employee_ID__c</columns>
        <columns>Name_Emp_EN_FN__c</columns>
        <columns>Name_Emp_EN_LN__c</columns>
        <columns>Employee_Date_Joined__c</columns>
        <columns>Probation_Completed__c</columns>
        <columns>CEP__c</columns>
        <columns>Name_Child_Count__c</columns>
        <columns>Employee_Retirement_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Contact_Person_JSON__c</columns>
        <columns>Employee_DOB__c</columns>
        <columns>Status_Marriage_Status__c</columns>
        <columns>License_Professional_Doc_No__c</columns>
        <columns>Available_Room__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data__c</field>
            <operation>equals</operation>
            <value>IN</value>
        </filters>
        <filters>
            <field>Employee_Date_Joined__c</field>
            <operation>equals</operation>
            <value>4/3/2023</value>
        </filters>
        <label>IN</label>
    </listViews>
    <listViews>
        <fullName>OUT</fullName>
        <columns>NAME</columns>
        <columns>Employee_ID__c</columns>
        <columns>Name_Emp_EN_FN__c</columns>
        <columns>Name_Emp_EN_LN__c</columns>
        <columns>Employee_Date_Joined__c</columns>
        <columns>Probation_Completed__c</columns>
        <columns>CEP__c</columns>
        <columns>Name_Child_Count__c</columns>
        <columns>Employee_Retirement_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Contact_Person_JSON__c</columns>
        <columns>Employee_DOB__c</columns>
        <columns>Status_Marriage_Status__c</columns>
        <columns>Available_Room__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data__c</field>
            <operation>equals</operation>
            <value>OUT</value>
        </filters>
        <label>OUT</label>
    </listViews>
    <nameField>
        <displayFormat>ME-{00000}</displayFormat>
        <label>ESS Master Employee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>